cabal-version:       2.4
name:                laop
version:             0.1.1.1
synopsis:            Matrix programming library
description:         Matrix programming library that uses a type-safe inductive definition
                     inspired by the Linear Algebra of Programming
homepage:            https://github.com/bolt12/laop
bug-reports:         https://github.com/bolt12/laop/issues
license:             MIT
license-file:        LICENSE
author:              Armando Santos
maintainer:          Armando Santos <armandoifsantos@gmail.com>
copyright:           2020 Armando Santos
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/bolt12/laop.git

common common-options
  build-depends:       base >= 4.12.0.0 && < 5,
                       deepseq
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     LAoP.Dist
                       LAoP.Dist.Internal
                       LAoP.Matrix.Internal
                       LAoP.Matrix.Nat
                       LAoP.Matrix.Type
                       LAoP.Relation
                       LAoP.Relation.Internal
                       LAoP.Utils
                       LAoP.Utils.Internal

test-suite laop-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Examples.Readme
  main-is:             Spec.hs
  build-depends:       laop
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -funfolding-use-threshold=16
                       -fexcess-precision
                       -optc-O3
                       -optc-ffast-math

benchmark laop-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       criterion
                     , QuickCheck
                     , deepseq
                     , laop
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -funfolding-use-threshold=16
                       -fexcess-precision
                       -optc-O3
                       -optc-ffast-math
